RESOLVED FIXED 85051
Fix repetitions & by animation support for SVGAnimateTransformElement
https://bugs.webkit.org/show_bug.cgi?id=85051
Summary Fix repetitions & by animation support for SVGAnimateTransformElement
Nikolas Zimmermann
Reported 2012-04-27 04:47:08 PDT
Repetitions are currently handled by adjusting percentage (percentage += repeatCount). This doesn't work for <animateTransform> as each repetition has to be post-multiplied to the animated transform list. By-animations are equal to values="0;by" animations in SMIL. 0 is the neutral element of addition, which is the _zero_ matrix, not the identity matrix for SVGTransform. See moz guys discussing the same problem, with the same outcome: http://brian.sol1.net/svg/animatetransform-issues/by-animation-and-scale-transformations/
Attachments
Patch (69.79 KB, patch)
2012-04-27 04:54 PDT, Nikolas Zimmermann
no flags
Patch v2 (69.74 KB, patch)
2012-04-27 06:59 PDT, Nikolas Zimmermann
koivisto: review+
Nikolas Zimmermann
Comment 1 2012-04-27 04:54:53 PDT
Early Warning System Bot
Comment 2 2012-04-27 05:00:53 PDT
Early Warning System Bot
Comment 3 2012-04-27 05:03:50 PDT
Build Bot
Comment 4 2012-04-27 05:08:47 PDT
Nikolas Zimmermann
Comment 5 2012-04-27 06:58:42 PDT
Uploading patch v2, which will fix the release builds.
Nikolas Zimmermann
Comment 6 2012-04-27 06:59:36 PDT
Created attachment 139192 [details] Patch v2
Antti Koivisto
Comment 7 2012-04-27 07:02:51 PDT
Comment on attachment 139192 [details] Patch v2 r=me
Nikolas Zimmermann
Comment 8 2012-04-27 07:10:22 PDT
Note You need to log in before you can comment on or make changes to this bug.