LayoutTests/svg/animations/script-tests/svgtransform-animation-discrete.js
@@ -25,36 +25,36 @@ rect.appendChild(animate);
 rootSVGElement.appendChild(rect);
 
 // Setup animation test
-
 function sample1() {
-    // Check initial/end conditions
-    shouldBe("rect.transform.animVal.numberOfItems", "0");
-}
-
-function sample2() {
     // Check initial/end conditions
     shouldBe("rect.transform.animVal.numberOfItems", "1");
     shouldBe("rect.transform.animVal.getItem(0).type", "SVGTransform.SVG_TRANSFORM_TRANSLATE");
     shouldBeCloseEnough("rect.transform.animVal.getItem(0).matrix.e", "100");
     shouldBeCloseEnough("rect.transform.animVal.getItem(0).matrix.f", "100");
+    shouldBe("rect.transform.baseVal.numberOfItems", "0");
 }
 
-function sample3() {
+function sample2() {
     shouldBe("rect.transform.animVal.numberOfItems", "1");
     shouldBe("rect.transform.animVal.getItem(0).type", "SVGTransform.SVG_TRANSFORM_TRANSLATE");
     shouldBeCloseEnough("rect.transform.animVal.getItem(0).matrix.e", "0");
     shouldBeCloseEnough("rect.transform.animVal.getItem(0).matrix.f", "0");
+    shouldBe("rect.transform.baseVal.numberOfItems", "0");
+}
+
+function sample3() {
+    shouldBe("rect.transform.animVal.numberOfItems", "0");
+    shouldBe("rect.transform.baseVal.numberOfItems", "0");
 }
 
 function executeTest() {
     const expectedValues = [
         // [animationId, time, sampleCallback]
-        ["animation", 0.0,   sample1],
-        ["animation", 0.001, sample2],
-        ["animation", 1.0,   sample2],
-        ["animation", 3.0,   sample3],
-        ["animation", 3.999, sample3],
-        ["animation", 4.001, sample1]
+        ["animation", 0.001, sample1],
+        ["animation", 1.999, sample1],
+        ["animation", 2.001, sample2],
+        ["animation", 3.999, sample2],
+        ["animation", 4.001, sample3]
     ];
 
     runAnimationTest(expectedValues);
